--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">superplatformgame</string>
+    <string name="start_screen_button">Start</string>
+    <string name="instructions_text_button">Instructions</string>
+    <string name="go_to_start">Go Back Start Screen</string>
+    <string name="instructions_text">
+        Get to the end with more than or equal to one hearts remaining.
+        Jump on enemies to kill them.
+        Avoid bumping into walls because you will lose hearts.
+        Have fun!
+    </string>
 </resources>
